Did some cleaning and restructuring

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 	<title>Climate Visualizer</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 
-	<script type="text/javascript" src="Camera.js"></script>
-	<script type="text/javascript" src="sylvester.js"></script>
-	<script type="text/javascript" src="Drawable.js"></script>
-	<script type="text/javascript" src="DataPoint.js"></script>
-	<script type="text/javascript" src="main.js"></script>
+	<script type="text/javascript" src="js/Camera.js"></script>
+	<script type="text/javascript" src="js/sylvester.js"></script>
+	<script type="text/javascript" src="js/Drawable.js"></script>
+	<script type="text/javascript" src="js/DataPoint.js"></script>
+	<script type="text/javascript" src="js/main.js"></script>
 	
 </head>
 <body>
