Made some small optimizations

--- a/index.html
+++ b/index.html
@@ -16,5 +16,8 @@
 		<p>Your browser does not support canvas, which is required to view the
 			visualizations.</p>
 	</canvas>
+	<div id="bottomPanel">
+		
+	</div>
 </body>
 </html>
