Converting the datapoints to polygons

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 			visualizations.</p>
 	</canvas>
 	<div id="bottomPanel">
-		
+		<div id="time-text"></div>
+		<div id="time-slide"><div class="drag" id="slider"></div></div>
 	</div>
 </body>
 </html>
