Added support for overflow in views and changed the control list to a table

--- a/index.html
+++ b/index.html
@@ -48,14 +48,32 @@
 			</p>
 
 			<h2>Map controls</h2>
-			<ul>
-				<li>Rotate left: Left arrow or A</li>
-				<li>Rotate right: Right arrow or D</li>
-				<li>Rotate up: Up arrow or W</li>
-				<li>Rotate down: Down arrow or S</li>
-				<li>Zoom in: Keypad+ or scroll up</li>
-				<li>Zoom out: Keypad- or scroll down</li>
-			</ul>
+			<table>
+				<tr>
+					<td>Rotate left:</td>
+					<td>Left arrow or A</td>
+				</tr>
+				<tr>
+					<td>Rotate right:</td>
+					<td>Right arrow or D</td>
+				</tr>
+				<tr>
+					<td>Rotate up:</td>
+					<td>Up arrow or W</td>
+				</tr>
+				<tr>
+					<td>Rotate down:</td>
+					<td>Down arrow or S</td>
+				</tr>
+				<tr>
+					<td>Zoom in:</td>
+					<td>Keypad+ or scroll up</td>
+				</tr>
+				<tr>
+					<td>Zoom out:</td> 
+					<td>Keypad- or scroll down</td>
+				</tr>
+			</table>
 		</div>
 	</div>
 
